--- a/src/main/webapp/WEB-INF/jsp/fragments/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/fragments/footer.jspf
@@ -1,5 +1,5 @@
 <footer th:fragment="footer" class="bg-light p-3 text-center">
     <p>
-        CSCI 361 - Software Engineering, ZaNomad team
+        CSCI 361 - Software Engineering | Railways Service, ZaNomad team
     </p>
 </footer>
