Added schedule-map to navbar

--- a/src/main/webapp/WEB-INF/jsp/fragments/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/fragments/navbar.jspf
@@ -18,6 +18,10 @@
                                     <li>
                                         <a href="${pageContext.request.contextPath}/schedule" class="nav-link">Search tickets</a>
                                     </li>
+
+                                    <li>
+                                        <a href="${pageContext.request.contextPath}/schedule-map" class="nav-link">Schedule with a map</a>
+                                    </li>
                                 </c:when>
                             </c:choose>
                         </c:when>
