--- a/src/main/webapp/WEB-INF/jsp/fragments/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/fragments/navbar.jspf
@@ -23,6 +23,14 @@
                                         <a href="${pageContext.request.contextPath}/schedule-map" class="nav-link">Schedule with a map</a>
                                     </li>
                                 </c:when>
+                                <c:when test="${appMetadata
+                                            .getJSONObject(\"app_metadata\")
+                                            .getJSONObject(\"authorization\")
+                                            .getJSONArray(\"roles\").get(0).equals(\"station_manager\")}">
+                                    <li>
+                                        <a href="${pageContext.request.contextPath}/logs" class="nav-link">View system logs</a>
+                                    </li>
+                                </c:when>
                             </c:choose>
                         </c:when>
                     </c:choose>
